<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_note_add_black_24dp"
            android:title="@string/menu_add" />
        <item
            android:id="@+id/nav_remediation"
            android:icon="@drawable/ic_camera_enhance_black_24dp"
            android:title="@string/menu_remediation" />
        <item
            android:id="@+id/nav_critical"
            android:icon="@drawable/ic_warning_black_24dp"
            android:title="@string/menu_critical" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_about" />
    </group>
</menu>
