<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dataentryformipnx_2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.dataentryformipnx_2.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_data"
        android:name="com.example.dataentryformipnx_2.ui.data_entry.Data_Entry"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_data_entry" />

    <fragment
        android:id="@+id/nav_remediation"
        android:name="com.example.dataentryformipnx_2.ui.remediation.Remediation"
        android:label="@string/menu_remediation"
        tools:layout="@layout/fragment_remediation" />
    <fragment
        android:id="@+id/nav_critical"
        android:name="com.example.dataentryformipnx_2.ui.critical.Critical"
        android:label="@string/menu_critical"
        tools:layout="@layout/fragment_critical" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.dataentryformipnx_2.ui.about.About"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_view"
        android:name="com.example.dataentryformipnx_2.view.ViewFragment"
        android:label="@string/view_entries"
        tools:layout="@layout/fragment_view" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.dataentryformipnx_2.login_package.Fragment_signout"
        android:label="@string/log_out"
        tools:layout="@layout/fragment_signout" />
</navigation>