<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ui.data_entry.PreventiveMaintenance"
    android:orientation="vertical"
    android:padding="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_issue"
        android:hint="@string/what_is_the_issue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RadioGroup
                android:id="@+id/radiogroup_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <RadioButton
                    android:id="@+id/radio_vi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/victoria_island"
                    android:textSize="18sp"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radio_lekki"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lekki"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radio_ikoyi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ikoyi"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radio_mainland"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mainland"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radio_island"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lagos_island"
                    android:textSize="18sp" />
            </RadioGroup>

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:background="@drawable/btn_resource"/>

            <RadioGroup
                android:id="@+id/radiogroup_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="18sp">

                <RadioButton
                    android:id="@+id/radio_feeder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feeder"
                    android:textSize="18sp"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radio_distribution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distribution"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radio_mst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mst_tail"
                    android:textSize="18sp" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_risk"
                android:layout_marginTop="5dp"
                android:hint="@string/what_is_the_risk"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_location"
                android:layout_marginTop="5dp"
                android:hint="@string/location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/textsp_element_affected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/spinner_selector"
                android:prompt="@string/spinner_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textbox_element_affected"
                android:layout_marginTop="5dp"
                android:hint="@string/if_others_specify_here"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/text_measures"
                android:layout_marginTop="5dp"
                android:hint="@string/measures_taken_to_avoid_repeated_outages"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                     />
            </com.google.android.material.textfield.TextInputLayout>


            <ImageButton
                android:id="@+id/btn_img"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/ic_menu_camera"
                android:background="@drawable/btn_resource"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        style="@style/Widget.MaterialComponents.Button"
        app:cornerRadius="10dp"
        app:strokeColor="@color/colorPrimary"
        android:textSize="18sp"
        android:padding="10dp"/>

</LinearLayout>