<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_package.Log_in_class"
    android:background="#ffffff">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"/>

    <View
        android:id="@+id/spiral_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        android:layout_below="@id/top_view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/spiral_view"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="30dp"
        android:paddingTop="30dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawablePadding="16dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:padding="10dp"
            android:textSize="18sp"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                android:padding="10dp"
                android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <Button-->
<!--        android:id="@+id/btn_login"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/login"-->
<!--        android:textSize="18sp"-->
<!--        android:textColor="#ffffff"-->
<!--        android:layout_marginTop="20dp"-->
<!--        />-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/Widget.MaterialComponents.Button"
            app:cornerRadius="10dp"
            app:strokeColor="@color/colorPrimary"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginTop="30dp" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        app:srcCompat="@drawable/ipnx2" />
</RelativeLayout>